test/tests/errors/error-own-empty-env.sm
// true
// false
/**/
/**/

program {
    var a = 1;
    {
        own x = a;
    }
}